--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         cuda: [11.7,12.1]
         python: [ 3.9.13 ,3.11.7]
+        py: [python3.9,python3.11]
         golang: [1.20]
         ubuntu_os: [1804]
     runs-on: ubuntu-latest
@@ -34,7 +35,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/gpu/base/python3.9/cuda-${{ matrix.cuda }}/Dockerfile
+          file: ./docker/gpu/base/${{ matrix.py }}/cuda-${{ matrix.cuda }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.IFLYOPENSOURCE }}/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }}
+
+
