--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -14,7 +14,6 @@ jobs:
       matrix:
         cuda: [11.7,12.1]
         python: [ 3.9.13 ,3.11.7]
-        py: [python3.9,python3.11]
         golang: [1.20]
         ubuntu_os: [1804]
     runs-on: ubuntu-latest
@@ -31,13 +30,23 @@ jobs:
           password: ${{ secrets.DOCKER_SECRET }}
 
 
-      - name: Build Docker Image -cuda-base
+      - name: Py39 Build Docker Image -cuda-base
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/gpu/base/${{ matrix.py }}/cuda-${{ matrix.cuda }}/Dockerfile
+          file: ./docker/gpu/base/python3.9/cuda-${{ matrix.cuda }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.IFLYOPENSOURCE }}/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }}
 
+
+
+      - name: Py311 Build Docker Image -cuda-base
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./docker/gpu/base/python3.11/cuda-${{ matrix.cuda }}/Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.IFLYOPENSOURCE }}/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }}
 
