--- a/docker/gpu/base/python3.11.7/cuda-11.7/Dockerfile
+++ b/docker/gpu/base/python3.11.7/cuda-11.7/Dockerfile
@@ -2,7 +2,9 @@ FROM nvidia/cuda:11.7.1-devel-ubuntu18.04
 
 ENV TZ=Asia/Shanghai \
     DEBIAN_FRONTEND=noninteractive
-ENV GOLANG_VERSION 1.17.11
+ENV GOLANG_VERSION 1.20
+ENV PYTHON_VERSION 3.11.7
+
 # Setup Go
 # https://github.com/docker-library/golang/blob/master/1.17/bullseye/Dockerfile
 # install cgo-related dependencies
@@ -24,33 +26,33 @@ RUN set -eux; \
 	url=; \
 	case "$arch" in \
 		'amd64') \
-			url='https://dl.google.com/go/go1.17.11.linux-amd64.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-amd64.tar.gz'; \
 			sha256='d69a4fe2694f795d8e525c72b497ededc209cb7185f4c3b62d7a98dd6227b3fe'; \
 			;; \
 		'armel') \
 			export GOARCH='arm' GOARM='5' GOOS='linux'; \
 			;; \
 		'armhf') \
-			url='https://dl.google.com/go/go1.17.11.linux-armv6l.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-armv6l.tar.gz'; \
 			sha256='56fb4a344bfe01427398083b3e82018fcde1f168a94e9df9820010b29e558f27'; \
 			;; \
 		'arm64') \
-			url='https://dl.google.com/go/go1.17.11.linux-arm64.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-arm64.tar.gz'; \
 			sha256='adefa7412c6798f9cad02d1e8336fc2242f5bade30c5b32781759181e01961b7'; \
 			;; \
 		'i386') \
-			url='https://dl.google.com/go/go1.17.11.linux-386.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-386.tar.gz'; \
 			sha256='8e43b4c63dda0612df0e1ed3cf8bed566fe8ae88082a46343c40be76a61371e4'; \
 			;; \
 		'mips64el') \
 			export GOARCH='mips64le' GOOS='linux'; \
 			;; \
 		'ppc64el') \
-			url='https://dl.google.com/go/go1.17.11.linux-ppc64le.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-ppc64le.tar.gz'; \
 			sha256='013624fc1964d576f314117f2f3b6a6a8f3d32f0ec8f55fa5962664537a34180'; \
 			;; \
 		's390x') \
-			url='https://dl.google.com/go/go1.17.11.linux-s390x.tar.gz'; \
+			url='https://dl.google.com/go/go1.20.linux-s390x.tar.gz'; \
 			sha256='0202a0b2ffaa9bdf1f2480789c2009ba6fde597e1f1c6d4cfb9559bb1964a39c'; \
 			;; \
 		*) echo >&2 "error: unsupported architecture '$arch' (likely packaging update needed)"; exit 1 ;; \
@@ -59,7 +61,7 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='https://dl.google.com/go/go1.17.11.src.tar.gz'; \
+		url='https://dl.google.com/go/go1.20.src.tar.gz'; \
 		sha256='ac2649a65944c6a5abe55054000eee3d77196880da36a3555f62e06540e8eb54'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
@@ -68,16 +70,44 @@ RUN set -eux; \
 	\
 	wget -O go.tgz.asc "$url.asc"; \
 	wget -O go.tgz "$url" --progress=dot:giga; \
-	echo "$sha256 *go.tgz" | sha256sum -c -; \
+	#echo "$sha256 *go.tgz" | sha256sum -c -; \
 	\
 # https://github.com/golang/go/issues/14739#issuecomment-324767697
 	GNUPGHOME="$(mktemp -d)"; export GNUPGHOME; \
-    mkdir ~/.gnupg; \
-    echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf; \
+	mkdir ~/.gnupg; \
+	echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf; \
 # https://www.google.com/linuxrepositories/
-	gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 'EB4C 1BFD 4F04 2F6D DDCC  EC91 7721 F63B D38B 4796'; \
 # let's also fetch the specific subkey of that key explicitly that we expect "go.tgz.asc" to be signed by, just to make sure we definitely have it
-	gpg --batch --keyserver keyserver.ubuntu.com --recv-keys '2F52 8D36 D67B 69ED F998  D857 78BD 6547 3CB3 BD13'; \
+    count=0; \
+	until gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 'EB4C 1BFD 4F04 2F6D DDCC  EC91 7721 F63B D38B 4796'; \
+	do \
+		count=$((count+1)); sleep 5; \
+		if [ $count -gt 2 ]; then \
+			echo "Failed to perform apt-key, FAILING"; \
+		exit 1; \
+		fi; \
+	echo "apt-key adv Failed, trying again ($count/3)"; \
+	done; \
+    count=0; \
+	until gpg --batch --keyserver keyserver.ubuntu.com --recv-keys '2F52 8D36 D67B 69ED F998  D857 78BD 6547 3CB3 BD13'; \
+	do \
+		count=$((count+1)); sleep 5; \
+		if [ $count -gt 2 ]; then \
+			echo "Failed to perform apt-key, FAILING"; \
+		exit 1; \
+		fi; \
+	echo "apt-key adv Failed, trying again ($count/3)"; \
+	done; \
+    count=0; \
+	until gpg --batch --keyserver keyserver.ubuntu.com --recv-keys ; \
+	do \
+		count=$((count+1)); sleep 5; \
+		if [ $count -gt 2 ]; then \
+			echo "Failed to perform apt-key, FAILING"; \
+		exit 1; \
+		fi; \
+	echo "apt-key adv Failed, trying again ($count/3)"; \
+	done; \
 	gpg --batch --verify go.tgz.asc go.tgz; \
 	gpgconf --kill all; \
 	rm -rf "$GNUPGHOME" go.tgz.asc; \
@@ -146,7 +176,6 @@ RUN set -eux; \
 	rm -rf /var/lib/apt/lists/*
 
 ENV GPG_KEY E3FF2839C048B25C084DEBE9B26995E310250568
-ENV PYTHON_VERSION 3.9.16
 
 RUN set -eux; \
 	\
