--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -16,7 +16,7 @@ jobs:
         python: [ 3.9.13 ,3.11.7]
         golang: [1.20]
         ubuntu_os: [1804]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # 项目构建
     steps:
       - name: Checkout
