feat: support 12.1cuda

--- a/docker/gpu/base/python3.9.13/cuda-11.6/Dockerfile
+++ b/docker/gpu/base/python3.9.13/cuda-11.6/Dockerfile
@@ -21,6 +21,7 @@ RUN set -eux; \
 	rm -rf /var/lib/apt/lists/*
 
 ENV PATH /usr/local/go/bin:$PATH
+RUN mkdir ~/.gnupg && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
 RUN set -eux; \
 	arch="$(dpkg --print-architecture)"; arch="${arch##*-}"; \
 	url=; \
