--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          github-server-url: https://521github.com
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
