--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -30,6 +30,13 @@ jobs:
           username: ${{ secrets.IFLYOPENSOURCE }}
           password: ${{ secrets.DOCKER_SECRET }}
 
+      - name: Log in to Artifacts Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: artifacts.iflytek.com/docker-private
+          username: ${{ secrets.YBYANG7_ARTIFACTS }}
+          password: ${{ secrets.YBYANG7_ARTIFACTS_PASS }}
+
 
       - name: Py39 Build Docker Image -cuda-base
         uses: docker/build-push-action@v2
@@ -38,7 +45,7 @@ jobs:
           file: ./docker/gpu/base/python${{ matrix.python }}/cuda-${{ matrix.cuda }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.IFLYOPENSOURCE }}/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }}
+          tags: docker.io/${{ secrets.IFLYOPENSOURCE }}/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }},artifacts.iflytek.com/docker-private/atp/${{env.CUDA_BASE_REPO}}:${{ matrix.cuda }}-${{ matrix.golang }}-${{ matrix.python }}-ubuntu${{ matrix.ubuntu_os }}
 
 
 
