--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -31,7 +31,7 @@ jobs:
           password: ${{ secrets.DOCKER_SECRET }}
 
       - name: Log in to Artifacts Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           registry: artifacts.iflytek.com/docker-private
           username: ${{ secrets.YBYANG7_ARTIFACTS }}
@@ -39,7 +39,7 @@ jobs:
 
 
       - name: Py39 Build Docker Image -cuda-base
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/gpu/base/python${{ matrix.python }}/cuda-${{ matrix.cuda }}/Dockerfile
