--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,11 +17,12 @@ env:
 
 jobs:
   aiges-building:
+    if: startsWith(github.event.commits[0].message, 'build_aiges')
     strategy:
       matrix:
         cuda: [ 12.1,11.7]
         python: [ 3.9.13,3.11.7 ]
-        golang: [1.20]
+        golang: ["1.20"]
         ubuntu_os: [1804]
     runs-on: ubuntu-latest
     # 项目构建
