--- a/.github/workflows/base_image_build.yaml
+++ b/.github/workflows/base_image_build.yaml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         cuda: [11.7,12.1]
         python: [ 3.9.13 ,3.11.7]
-        golang: [1.20]
+        golang: ["1.20"]
         ubuntu_os: [1804]
 
     runs-on: self-hosted
