--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,9 +62,9 @@ jobs:
   goreleaser:
     strategy:
       matrix:
-        cuda: [ 10.1,11.2,11.6,11.7]
-        python: [ 3.9.13 ]
-        golang: [1.17]
+        cuda: [ 12.1,11.7]
+        python: [ 3.9.13,3.11.7 ]
+        golang: ["1.20"]
         ubuntu_os: [1804]
     runs-on: ubuntu-latest
     steps:
@@ -76,7 +76,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@master
         with:
-          go-version: 1.17
+          go-version: 1.20
 
       - name: Prepare
         id: prepare
@@ -152,7 +152,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@master
         with:
-          go-version: 1.17
+          go-version: 1.20
 
       - name: Prepare
         id: prepare
